	including that for composite timeline, though
	`twittering-call-api' accepts only a primary timeline. Also, the
	new function can be invoked with more detailed retrieval options
	than the existing function `twittering-get-and-render-timeline'.
	(twittering-get-and-render-timeline): reimplemented with the new
	function `twittering-retrieve-timeline'.

2012-07-22  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Clear list of undo entries on a pop-up edit
	buffer.
	(twittering-update-status-from-pop-up-buffer): clear list of undo
	entries.

	* twittering-mode.el: Fix the bug that retweets may not be
	rendered in a composite timeline.
	(twittering-render-timeline): render a retweet if the first ID
	referring the retweet is unknown. This is necessary because a
	referring ID table of a composite timeline may lack information of
	some component timelines.

	* twittering-mode.el: `twittering-id-to-time' restores the
	milli-second parameter.
	(twittering-id-to-time): restore the milli-second parameter.

	* twittering-mode.el: Fix the bug that
	`twittering-render-replied-statuses' may ignore the argument
	`pos'.
	(twittering-render-replied-statuses): correctly consider the
	argument `pos'.

	* twittering-mode.el: Fix the bug that a single tweet timeline
	consisting of a retweet causes an error. A single tweet timeline
	is registered to `twittering-timeline-data-table' in a special
	way (See `twittering-retrieve-single-tweet-sentinel'). However,
	`twittering-current-timeline-referring-id-table' did not take it
	into account.
	(twittering-current-timeline-referring-id-table): return the
	correct hash table for a single tweet timeline.

2012-05-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Add some timeline specs to the definition of
	timeline spec strings.

	* twittering-mode.el: Remove routines for the filter timeline.
	(twittering-timeline-spec-to-string): remove routines for the
	filter timeline.